--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 	<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]-->
 
-	<script src="js/libs/caat.js"></script>
+	<script src="js/lib/caat.js"></script>
+	<script src="js/lib/socket.io.js"></script>
 </head>
 <body>
 <p class="info">Fork this project on <a href="http://github.com">http://github.com</a></p>
@@ -75,3 +76,4 @@
 	</script>
 </body>
 </html>
+
