Added RealtimeMultiplayer namespace, started adding a few classes, was able to get classes shared between Node.js and browser without much fuss using namespace

--- a/index.html
+++ b/index.html
@@ -23,8 +23,15 @@
 	<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]-->
 
+	<!--lib-->
 	<script src="js/lib/caat.js"></script>
 	<script src="js/lib/socket.io.js"></script>
+
+	<!-- RealtimeMultiplayer -->
+	<script src="js/namespace.js"></script>
+	<script src="js/GameEntity.js"></script>
+
+
 </head>
 <body>
 <p class="info">Fork this project on <a href="http://github.com">http://github.com</a></p>
