--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
 	<script src="js/lib/socket.io.js"></script>
 
 	<!-- RealtimeMultiplayer -->
-	<script src="js/namespace.js"></script>
+	<script src="js/RealtimeMutliplayerGame.js"></script>
+	<script src="js/Constants.js"></script>
 	<script src="js/GameEntity.js"></script>
 
 
