--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 
 	<!--lib-->
 	<script src="js/lib/caat.js"></script>
+	<script src="js/lib/Stats.js"></script>
 	<script src="js/lib/socket.io.js"></script>
 
 	<!-- RealtimeMultiplayer -->
