--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
 	<!--lib-->
 	<script src="js/lib/caat.js"></script>
 	<script src="js/lib/socket.io.js"></script>
+	<script src="js/lib/Joystick.js"></script>
+
 
 	<!-- RealtimeMultiplayer -->
 	<script src="js/RealtimeMutliplayerGame.js"></script>
