Created DemoClientGame, added initial deallocation stubs in AbstractGame and subclasses

--- a/index.html
+++ b/index.html
@@ -33,9 +33,13 @@
 	<!-- RealtimeMultiplayer -->
 	<script src="js/core/RealtimeMutliplayerGame.js"></script>
 	<script src="js/model/Constants.js"></script>
+	<script src="js/core/AbstractGame.js"></script>
+	<script src="js/core/AbstractClientGame.js"></script>
 	<script src="js/GameEntity.js"></script>
 
-
+  	<!--DemoApp-->
+	<script src="js/demo/DemoApp.js"></script>
+	<script src="js/demo/DemoClientGame.js"></script>
 </head>
 <body>
 <p class="info">Fork this project on <a href="http://github.com">http://github.com</a></p>
