renamed joystick to keyboard, created GameView, FieldView, and FieldController

--- a/index.html
+++ b/index.html
@@ -32,9 +32,17 @@
 
 	<!-- RealtimeMultiplayer -->
 	<script src="js/core/RealtimeMutliplayerGame.js"></script>
-	<script src="js/model/Constants.js"></script>
 	<script src="js/core/AbstractGame.js"></script>
 	<script src="js/core/AbstractClientGame.js"></script>
+
+	<script src="js/model/Constants.js"></script>
+	<script src="js/Controller/FieldController.js"></script>
+
+	<script src="js/Input/Keyboard.js"></script>
+
+	<script src="js/View/FieldView.js"></script>
+	<script src="js/View/GameView.js"></script>
+		
 	<script src="js/GameEntity.js"></script>
 
   	<!--DemoApp-->
