--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	<script src="js/lib/caat.js"></script>
 	<script src="js/lib/Stats.js"></script>
 	<script src="js/lib/socket.io.js"></script>
-	<script src="js/lib/Joystick.js"></script>
+	<script src="js/lib/SortedLookupTable.js"></script>
 
 
 	<!-- RealtimeMultiplayer -->
