--- a/index.html
+++ b/index.html
@@ -32,10 +32,11 @@
 
 	<!-- RealtimeMultiplayer -->
 	<script src="js/core/RealtimeMutliplayerGame.js"></script>
+	<script src="js/model/Constants.js"></script>
+	<script src="js/network/ClientNetChannel.js"></script>
 	<script src="js/core/AbstractGame.js"></script>
 	<script src="js/core/AbstractClientGame.js"></script>
 
-	<script src="js/model/Constants.js"></script>
 	<script src="js/Controller/FieldController.js"></script>
 
 	<script src="js/Input/Keyboard.js"></script>
