Sending initial message between NetChannels and storing server generated clientid

--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
 	<!-- RealtimeMultiplayer -->
 	<script src="js/core/RealtimeMutliplayerGame.js"></script>
 	<script src="js/model/Constants.js"></script>
+	<script src="js/model/NetChannelMessage.js"></script>
 	<script src="js/network/ClientNetChannel.js"></script>
+
 	<script src="js/core/AbstractGame.js"></script>
 	<script src="js/core/AbstractClientGame.js"></script>
 
