Added CollisionManager, added Point. Connection -> join -> callback working in netchannels

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 	<script src="js/View/FieldView.js"></script>
 	<script src="js/View/GameView.js"></script>
 		
-	<script src="js/GameEntity.js"></script>
+	<script src="js/model/GameEntity.js"></script>
 
   	<!--DemoApp-->
 	<script src="js/demo/DemoApp.js"></script>
