Base GameEntity fleshed out, BaseTrait and KeyboardInputTrait fleshed out, browser-client still waiting to be acknowledged on joingame

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 
 	<!-- RealtimeMultiplayer -->
 	<script src="js/core/RealtimeMutliplayerGame.js"></script>
+	<script src="js/model/Point.js"></script>
 	<script src="js/model/Constants.js"></script>
 	<script src="js/model/NetChannelMessage.js"></script>
 	<script src="js/network/ClientNetChannel.js"></script>
@@ -39,12 +40,12 @@
 	<script src="js/core/AbstractGame.js"></script>
 	<script src="js/core/AbstractClientGame.js"></script>
 
-	<script src="js/Controller/FieldController.js"></script>
+	<script src="js/controller/FieldController.js"></script>
 
-	<script src="js/Input/Keyboard.js"></script>
+	<script src="js/input/Keyboard.js"></script>
 
-	<script src="js/View/FieldView.js"></script>
-	<script src="js/View/GameView.js"></script>
+	<script src="js/view/FieldView.js"></script>
+	<script src="js/view/GameView.js"></script>
 		
 	<script src="js/model/GameEntity.js"></script>
 
