Circles moving across the screen jaggedly, interpolation is wrong somewhere

--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
 
   	<!--DemoApp-->
 	<script src="js/demo/DemoApp.js"></script>
+	<script src="js/demo/DemoAppConstants.js"></script>
+	<script src="js/demo/CircleEntity.js"></script>
 	<script src="js/demo/DemoClientGame.js"></script>
 </head>
 <body>
