implementing input to send to server.

--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
 	<script src="js/core/AbstractClientGame.js"></script>
 
 	<script src="js/controller/FieldController.js"></script>
+	<script src="js/controller/traits/BaseTrait.js"></script>
+	<script src="js/controller/traits/KeyboardInputTrait.js"></script>
 
 	<script src="js/input/Keyboard.js"></script>
 
@@ -53,6 +55,7 @@
 	<script src="js/demo/DemoApp.js"></script>
 	<script src="js/demo/DemoAppConstants.js"></script>
 	<script src="js/demo/CircleEntity.js"></script>
+	<script src="js/demo/PlayerEntity.js"></script>
 	<script src="js/demo/DemoClientGame.js"></script>
 </head>
 <body>
