Fieldview is now DemoView, fixed collision manager wrapping issue, fixed view offset issue

--- a/index.html
+++ b/index.html
@@ -44,7 +44,6 @@
 
 	<script src="js/input/Keyboard.js"></script>
 
-	<script src="js/view/FieldView.js"></script>
 	<script src="js/view/GameView.js"></script>
 		
 	<script src="js/model/GameEntity.js"></script>
@@ -54,6 +53,7 @@
 	<script src="js/demo/DemoAppConstants.js"></script>
 	<script src="js/demo/CircleEntity.js"></script>
 	<script src="js/demo/DemoClientGame.js"></script>
+	<script src="js/demo/DemoView.js"></script>
 </head>
 <body>
 <p class="info">Fork this project on <a href="http://github.com">http://github.com</a></p>
