Adding MouseInput to DemoBox2DApp

--- a/index_box2d.html
+++ b/index_box2d.html
@@ -46,7 +46,7 @@
 
 	<script src="js/input/Keyboard.js"></script>
 
-	<script src="js/view/GameView.js"></script>
+	<script src="js/core/AbstractGameView.js"></script>
 		
 	<script src="js/model/GameEntity.js"></script>
 
