--- a/DemoApp.html
+++ b/DemoApp.html
@@ -95,7 +95,7 @@
 	<!--<p id="jquery-test" href="#" class="info">jQuery is not loaded (http://localhost/ needed)</p>-->
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.js"></script>
 	<script>!window.jQuery && document.write(unescape('%3Cscript src="js/libs/jquery-1.5.1.js"%3E%3C/script%3E'))</script>
-	<script src="js/script.js"></script>
+	<script src="js/demo/script.js"></script>
 	<!--[if lt IE 7 ]>
 	<script src="js/libs/dd_belatedpng.js"></script>
 	<script> DD_belatedPNG.fix('img, .png_bg');</script>
