--- a/DemoApp.html
+++ b/DemoApp.html
@@ -8,7 +8,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	
-	<title> Realtime Multiplayer Node.js </title>
+	<title>RealtimeMultiplayerNodeJs</title>
 	<meta name="description" content="A realtime authoritative server multiplayer game using Node.js">
 	<meta name="author" content="Mario Gonzalez">
 	
@@ -30,7 +30,7 @@
 	<script src="js/lib/SortedLookupTable.js"></script>
 
 
-	<!-- RealtimeMultiplayer -->
+	<!-- RealtimeMultiplayerNodeJs -->
 	<script src="js/core/RealtimeMutliplayerGame.js"></script>
 	<script src="js/model/Point.js"></script>
 	<script src="js/model/Constants.js"></script>
@@ -62,12 +62,12 @@
 <p class="info">Fork this project on <a href="http://github.com">http://github.com</a></p>
 	<div id="header-container">
 		<header class="wrapper">
-			<h1 id="title">RunAmok</h1>
+			<h1 id="title">RealtimeMultiplayerNode.js</h1>
 			<nav>
 				<ul>
-					<li><a href="#">onedayitwillmake</a></li>
-					<li><a href="#">hikirsch</a></li>
-					<li><a href="#">ogilvy</a></li>
+					<li><a href="http://twitter.com/#!/1dayitwillmake">onedayitwillmake</a></li>
+					<li><a href="https://twitter.com/#!/hikirsch">hikirsch</a></li>
+					<li><a href="http://ogilvy.com">ogilvy</a></li>
 				</ul>
 			</nav>
 		</header>
