--- a/DemoBox2DApp.html
+++ b/DemoBox2DApp.html
@@ -61,7 +61,7 @@
 <p class="info">Fork this project on <a href="http://github.com">http://github.com</a></p>
 	<div id="header-container">
 		<header class="wrapper">
-			<h1 id="title">RunAmok</h1>
+			<h1 id="title">RealtimeMultiplayerNode.js</h1>
 			<nav>
 				<ul>
 					<li><a href="#">onedayitwillmake</a></li>
