Fixed issue with AbstractClientGame::gameClock

--- a/DemoBubbleDots.html
+++ b/DemoBubbleDots.html
@@ -28,6 +28,7 @@
 	<script src="js/lib/Stats.js"></script>
 	<script src="js/lib/socket.io.js"></script>
 	<script src="js/lib/SortedLookupTable.js"></script>
+	<script src="js/lib/RequestAnimationFrame.js"></script>
 
 
 	<!-- RealtimeMultiplayerNodeJs -->
@@ -51,6 +52,7 @@
 	<script src="js/BubbleDots/BubbleDotsApp.js"></script>
 	<script src="js/BubbleDots/BubbleDotsConstants.js"></script>
 	<script src="js/BubbleDots/entities/CircleEntity.js"></script>
+	<script src="js/BubbleDots/entities/PlayerEntity.js"></script>
 	<script src="js/BubbleDots/BubbleDotsClientGame.js"></script>
 	<script src="js/BubbleDots/BubbleDotsView.js"></script>
 </head>
