Fixed demo's to use RequestAnimationFrame. CircleManager now properly using collisionMask and collisionGroup

--- a/DemoCircles.html
+++ b/DemoCircles.html
@@ -28,6 +28,7 @@
 	<script src="js/lib/Stats.js"></script>
 	<script src="js/lib/socket.io.js"></script>
 	<script src="js/lib/SortedLookupTable.js"></script>
+	<script src="js/lib/RequestAnimationFrame.js"></script>
 
 
 	<!-- RealtimeMultiplayerNodeJs -->
@@ -45,18 +46,15 @@
 	<script src="js/controller/traits/KeyboardInputTrait.js"></script>
 
 	<script src="js/input/Keyboard.js"></script>
-
-	<script src="js/view/GameView.js"></script>
-		
 	<script src="js/model/GameEntity.js"></script>
 
   	<!--DemoApp-->
-	<script src="js/demo/DemoApp.js"></script>
-	<script src="js/demo/DemoAppConstants.js"></script>
-	<script src="js/demo/CircleEntity.js"></script>
-	<script src="js/demo/PlayerEntity.js"></script>
-	<script src="js/demo/DemoClientGame.js"></script>
-	<script src="js/demo/DemoView.js"></script>
+	<script src="js/DemoCircles/DemoApp.js"></script>
+	<script src="js/DemoCircles/DemoAppConstants.js"></script>
+	<script src="js/DemoCircles/CircleEntity.js"></script>
+	<script src="js/DemoCircles/PlayerEntity.js"></script>
+	<script src="js/DemoCircles/DemoClientGame.js"></script>
+	<script src="js/DemoCircles/DemoView.js"></script>
 </head>
 <body>
 <p class="info">Fork this project on <a href="http://github.com">http://github.com</a></p>
@@ -95,7 +93,7 @@
 	<!--<p id="jquery-test" href="#" class="info">jQuery is not loaded (http://localhost/ needed)</p>-->
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.js"></script>
 	<script>!window.jQuery && document.write(unescape('%3Cscript src="js/libs/jquery-1.5.1.js"%3E%3C/script%3E'))</script>
-	<script src="js/demo/script.js"></script>
+	<script src="js/DemoCircles/script.js"></script>
 	<!--[if lt IE 7 ]>
 	<script src="js/libs/dd_belatedpng.js"></script>
 	<script> DD_belatedPNG.fix('img, .png_bg');</script>
