--- a/DemoHelloWorld.html
+++ b/DemoHelloWorld.html
@@ -28,6 +28,8 @@
 	<script src="js/lib/Stats.js"></script>
 	<script src="js/lib/socket.io.js"></script>
 	<script src="js/lib/SortedLookupTable.js"></script>
+	<script src="js/lib/RequestAnimationFrame.js"></script>
+
 
 
 	<!-- RealtimeMultiplayerNodeJs -->
