Fixed GameEntity traits deallocation crash, fixed BubbleDot radius offset on tween

--- a/DemoBubbleDots.html
+++ b/DemoBubbleDots.html
@@ -8,7 +8,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	
-	<title>RealtimeMultiplayerNodeJs</title>
+	<title>BubbleDots</title>
 	<meta name="description" content="A realtime authoritative server multiplayer game using Node.js">
 	<meta name="author" content="Mario Gonzalez">
 	
@@ -17,7 +17,7 @@
 	<link rel="shortcut icon" href="/favicon.ico">
 	<link rel="apple-touch-icon" href="/apple-touch-icon.png">
 	<link rel="stylesheet" href="css/style.css?v=2">
-	<link rel="stylesheet" href="css/application.css?v=2">
+	<link rel="stylesheet" href="css/bubbledots.css?v=2">
 
 	<!--[if lt IE 9]>
 	<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -60,19 +60,17 @@
 <p class="info">Fork this project on <a href="http://github.com">http://github.com</a></p>
 	<div id="header-container">
 		<header class="wrapper">
-			<h1 id="title">RealtimeMultiplayerNode.js</h1>
+			<h1 id="title">BubbleDots</h1>
 			<nav>
 				<ul>
 					<li><a href="http://twitter.com/#!/1dayitwillmake">onedayitwillmake</a></li>
-					<li><a href="https://twitter.com/#!/hikirsch">hikirsch</a></li>
-					<li><a href="http://ogilvy.com">ogilvy</a></li>
 				</ul>
 			</nav>
 		</header>
 	</div>
 	<div id="main" class="wrapper">
 		<aside>
-			<h3>Game Statistics:</h3>
+			<h3>Log:</h3>
 		</aside>
 		<article>
 			<header>
