Testing not using, Socket.IO

--- a/DemoHelloWorld.html
+++ b/DemoHelloWorld.html
@@ -3,7 +3,7 @@
 <!--[if IE 7 ]>    <html lang="en" class="no-js ie7"> <![endif]-->
 <!--[if IE 8 ]>    <html lang="en" class="no-js ie8"> <![endif]-->
 <!--[if IE 9 ]>    <html lang="en" class="no-js ie9"> <![endif]-->
-[if (gt IE 9)|!(IE)]><! <html lang="en" class="no-js"> <![endif]
+[if (gt IE 9)|!(IE)]><! <html lang="en" class="no-js"><![endif]-->
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -27,6 +27,7 @@
 	<script src="js/lib/caat.js"></script>
 	<script src="js/lib/Stats.js"></script>
 	<script src="js/lib/socket.io.js"></script>
+	<script src="js/lib/bonsai-ws/bison.js"></script>
 	<script src="js/lib/SortedLookupTable.js"></script>
 	<script src="js/lib/RequestAnimationFrame.js"></script>
 
