fixed the usage of the socket.io api

--- a/DemoBox2DApp.html
+++ b/DemoBox2DApp.html
@@ -26,7 +26,7 @@
 	<!--lib-->
 	<script src="js/lib/caat.js"></script>
 	<script src="js/lib/Stats.js"></script>
-	<script src="js/lib/socket.io.js"></script>
+    <script src="node_modules/socket.io/node_modules/socket.io-client/dist/socket.io.js"></script>
 	<script src="js/lib/SortedLookupTable.js"></script>
 	<script src="js/lib/RequestAnimationFrame.js"></script>
 
